Added comments and explanations

--- a/ examples/notebooks/EarlyStopping_HRTEM_pv.ipynb
+++ b/ examples/notebooks/EarlyStopping_HRTEM_pv.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM1hRYh/49dZmiv0DoRa3MN",
+      "authorship_tag": "ABX9TyOFRGe18RK/RXBEDJLqMoC0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +14,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -38,6 +37,19 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Install the latest AtomAI version with additional features such as\n",
+        "\n",
+        "- Early stopping\n",
+        "- Auto-thresholding\n",
+        "- Weight decay"
+      ],
+      "metadata": {
+        "id": "Rkx38GwkuBK9"
+      }
     },
     {
       "cell_type": "code",
@@ -123,6 +135,7 @@
       },
       "outputs": [],
       "source": [
+        "# import all necessay libraries.\n",
         "from atomai.utils import create_lattice_mask, extract_patches_\n",
         "from atomai.transforms import datatransform\n",
         "import numpy as np\n",
@@ -138,24 +151,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://drive.google.com/file/d/12HvjJJUbGYELZ_aX5d2NM91DRnNQtSvi/view?usp=sharing, https://drive.google.com/file/d/18pU8wdZ7oDV7IiUo7aSGfWIKpCmi2fUt/view?usp=sharing, https://drive.google.com/file/d/1OahENi8mbeX9RybnT2xY-I4psBZmQ1GF/view?usp=sharing, https://drive.google.com/file/d/1OsXg82Lc3Ci-7H-RQCwUCvu-ifZwiUsd/view?usp=sharing, https://drive.google.com/file/d/1a8hu5Utns5yAGe0rQNi7cpswHopl90yJ/view?usp=sharing, https://drive.google.com/file/d/1aQHdYMyOcTobedw7vnG7udzWFLVbyV44/view?usp=sharing"
-      ],
-      "metadata": {
-        "id": "D1z10oWb5UDP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "The following function, download_HRTEM_files, loads data files based on the user's choice of mode and provides options for 'Au', 'CdSe', and 'combined'.\n",
+        "\n",
         "### Following options are availabe for loading:-\n",
-        "- Au: Au_Bal_MedFilt_cutimages_20190726.h5 :\n",
-        "- Au maps: Au_Bal_unFilt_cutimages_20190423_maps.h5\n",
-        "\n",
-        "- CdSe: Bal_MedFilt_CdSeRelabel512Images_20190726.h5\n",
-        "- CdSe maps: Bal_unFilt_CdSeRelabel512Images_20190724_maps.h5\n",
-        "\n",
-        "- Au+ CdSe: Bal_MedFilt_AuCdSeDots_20190726_v2.h5\n",
-        "- Au + CdSe maps: Bal_unFilt_CdSeRelabel512Images_20190724_maps.h5"
+        "- Au\n",
+        "- CdSe\n",
+        "- combined"
       ],
       "metadata": {
         "id": "yz_yq9-u0WoM"
@@ -295,6 +296,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The following two functions perform data augmentation and generate the training and the validation set"
+      ],
+      "metadata": {
+        "id": "t8JNHfYTxzsD"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def imgen(rotat=True, mode=\"contrast\"):\n",
@@ -362,7 +372,7 @@
         "      image_fin,lbl_fin=imgen(rotat=True,mode=mode)\n",
         "      image_fin_full=np.concatenate((image_fin_full,image_fin))\n",
         "      lbl_fin_full=np.concatenate((lbl_fin_full,lbl_fin))\n",
-        "      print('Datapoints created:'+str(len(lbl_fin_full))+'\\r')\n",
+        "      print('Datapoints created:'+str(len(lbl_fin_full)), end='\\r')\n",
         "  return image_fin_full, lbl_fin_full"
       ],
       "metadata": {
@@ -401,7 +411,7 @@
     {
       "cell_type": "code",
       "source": [
-        "images, images_val, labels, labels_val=train_test_split(image_fin,lbl_fin, test_size=0.2, random_state=42)"
+        "images, images_val, labels, labels_val=train_test_split(image_fin,lbl_fin, test_size=0.2, random_state=42) #splitting train and validation set"
       ],
       "metadata": {
         "id": "zklLSvkd4PT1"
@@ -412,7 +422,7 @@
     {
       "cell_type": "code",
       "source": [
-        "del X_train_pre, y_train_pre, image_fin, lbl_fin"
+        "del X_train_pre, y_train_pre, image_fin, lbl_fin #remove extraneous variables"
       ],
       "metadata": {
         "id": "XWAuHb1y6RK9"
@@ -653,6 +663,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Early stopping:\n",
+        "- The implemented Early stopping module has a few related kwargs. These can be set by the user.\n",
+        "\n",
+        "- Stochastic weight averaging is not implemented for Early stopping Model, so it must be set to false, else ES will not run.\n",
+        "\n",
+        "- Tolerance is how much minimum improvement is necessary to be considered as an improvement.\n",
+        "\n",
+        "- Paitence is how many epochs the model runs for without improvement before terminating. This is done in an attempt to prevent the model settling in a local minima, and resulting in sub-par performance\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "iy1Ck1YWC6S7"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -757,10 +784,38 @@
         }
       ],
       "source": [
+        "#fitting the model\n",
         "model.fit(images, labels, images_val, labels_val, # training data\n",
         "          training_cycles=3000, compute_accuracy=True, batch_size=16, swa=False, filename='ES_reg',\n",
-        "          patience=300,tolerance=1e-4,verbose=True,auto_thresh=True)"
+        "          patience=300,tolerance=1e-4,verbose=True,auto_thresh=True)\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Thresholding\n",
+        "We shall take a look at automatic thresholding here.\n",
+        "Once the model is trained on the dataset, the holdout dataset is passed to it. The model then predicts k probabilities for each class for each pixel. These probability values can be 'thresholded' at various values, i.e, the class k is predicted if and only if $$I\\!P(k)>= \\theta$$\n",
+        "where $\\theta$, is the threshold value.\n",
+        "\n",
+        "\\\\\n",
+        "In the context of thresholding, when the threshold value (represented as $\\theta$) is set to 0.5, it is considered the standard value. This threshold corresponds to 1/k, where k is equal to 2, representing the number of classes. According to this standard threshold, an instance is classified as positive if its probability is above 0.5.\n",
+        "\n",
+        "\n",
+        "\\\\\n",
+        "When the threshold $\\theta$ is set to a lower value, even the slightest probability is sufficient for an instance to be classified as a positive instance of the class. This results in an increase in recall, but it also leads to a decrease in precision.\n",
+        "\n",
+        "\\\\\n",
+        "Conversely, when the threshold $\\theta$ is set to a larger value, only instances with significantly high probabilities are classified as positive. This higher threshold value reduces recall since some true positive instances may now fall below the threshold. However, it increases precision as the selected positive instances are more likely to be true positives.\n",
+        "\n",
+        "## Automatic threshold setting\n",
+        "\n",
+        "By setting the ```auto_thresh``` kwarg to True, automatic binary threshold  for optimal f1-score is selected with respect to holdout-set ```images_val```. The threshold maximises the threshold with respect to the holdout set, which we use as validation set, and then predict on the test set  ```images_test``` which is not provided to the model."
+      ],
+      "metadata": {
+        "id": "aAopII4FVXWv"
+      }
     },
     {
       "cell_type": "code",
@@ -785,8 +840,12 @@
         }
       ],
       "source": [
-        "model.binary_thresh #note the threshold if different from the default 0.5.\n",
-        "#This maximizes our f1-score"
+        "'''\n",
+        "The following value of threshold maximizes the f-1 score over  images_val.\n",
+        "Note the threshold if different from the default 0.5.\n",
+        "\n",
+        "'''\n",
+        "model.binary_thresh"
       ]
     },
     {
@@ -795,7 +854,9 @@
         "id": "03da80b9"
       },
       "source": [
-        "# predictions"
+        "# Predictions:\n",
+        "\n",
+        "Predict on ```images_test``` using the model, using the threshold found by automatic thresholding"
       ]
     },
     {
@@ -806,7 +867,7 @@
       },
       "outputs": [],
       "source": [
-        "# model=aoi.load_model('ES_reg_metadict_final.tar')#can load the model from saved file"
+        "# model=aoi.load_model('ES_reg_metadict_final.tar')# we can load the model from saved file as well, which has the best binary thrshold saved"
       ]
     },
     {
@@ -855,7 +916,7 @@
         }
       ],
       "source": [
-        "pred_user=model.predict(images_test,thresh=0.5) #user can provide threshold as well"
+        "pred_user=model.predict(images_test,thresh=0.5) #user can provide threshold as well, here the predictions are in standard AtomAI format"
       ]
     },
     {
@@ -929,7 +990,7 @@
         }
       ],
       "source": [
-        "pred_auto[-1] #auto pred has an additional channel with class predictions for given best threshold"
+        "pred_auto[-1] #auto pred has an additional channel with class predictions for given best threshold. this is only produced by automatic thresholding"
       ]
     },
     {
