--- a/examples/notebooks/EarlyStopping_HRTEM_pv.ipynb
+++ b/examples/notebooks/EarlyStopping_HRTEM_pv.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOFRGe18RK/RXBEDJLqMoC0",
+      "authorship_tag": "ABX9TyNoyb8y0JpAp+zLK1fyAGnd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,22 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Pragalbhv/atomai/blob/master/examples/notebooks/EarlyStopping_HRTEM_pv.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Early stopping Demo 2: HRTEM dataset\n",
+        "\n",
+        "This is a short demo for the improved AtomAI model. The model has several additions. such as\n",
+        "- Early stopping\n",
+        "- Automatic binary thresholding\n",
+        "- Weight Decay\n",
+        "\n",
+        "The data contains HRTEM images of Au and CdSe nanoparticles along with manually marked image-maps."
+      ],
+      "metadata": {
+        "id": "Fue8zghigTIX"
+      }
     },
     {
       "cell_type": "code",
