Updated to include comments and explanations

--- a/examples/notebooks/EarlyStopping_LBFO_pv.ipynb
+++ b/examples/notebooks/EarlyStopping_LBFO_pv.ipynb
@@ -18,7 +18,7 @@
       "source": [
         "# Early stopping Demo 1: LBFO dataset\n",
         "\n",
-        "This is a short demo for the imrpoved AtomAI model. The model has several additions. such as\n",
+        "This is a short demo for the improved AtomAI model. The model has several additions. such as\n",
         "- Early stopping\n",
         "- Automatic binary thresholding\n",
         "- Weight Decay\n",
@@ -27,26 +27,8 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NWHJbeQUDyjP"
-      },
-      "source": [
-        "## Install AtomAI review version with ES enabled"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aeU2O_OqA1Qh"
-      },
-      "source": [
-        "Install AtomAI:"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "6VQi0JnHRGAV"
       },
@@ -56,8 +38,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Install the latest AtomAI version with additional features such as\n",
+        "\n",
+        "- Early stopping\n",
+        "- Auto-thresholding\n",
+        "- Weight decay"
+      ],
+      "metadata": {
+        "id": "KmGxiHOThOWu"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -133,12 +128,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "6DJdtnEBSC_k"
       },
       "outputs": [],
       "source": [
+        "# import all necessay libraries.\n",
         "from atomai.utils import create_lattice_mask, extract_patches_\n",
         "from atomai.transforms import datatransform\n",
         "import numpy as np\n",
@@ -151,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -191,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "UUODNm_VWG6A"
       },
@@ -212,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "ugLweZiNVo9x"
       },
@@ -245,8 +241,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "We set values for data-augmentation here. By changing the values here you can generate images according to how you want the data to change. \\\\\n",
+        "\n",
+        "In our study we modified the test data as well, as we tested the performance of our model at its limits."
+      ],
+      "metadata": {
+        "id": "OE8tlGmPpBmA"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "9a34cbe6"
       },
@@ -267,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -298,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -328,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -356,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "NIDcTsTqYmQW"
       },
@@ -376,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -425,12 +432,12 @@
         "id": "c6d9550a"
       },
       "source": [
-        "Initialize a nodel for semantic segmentation:"
+        "Initialize a model for semantic segmentation:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "46efb353"
       },
@@ -441,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -571,8 +578,35 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The parameters like training cycles, patience, number of augmetned images created are modified so as to run in a google colab notebook without any premium resources. This is done in demo 2 as well.\n",
+        "\n",
+        "The training cycles were set to 5000 and patience to 500, the number of images produced were ~ 2500"
+      ],
+      "metadata": {
+        "id": "FiKKqRjSrbI0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Early stopping:\n",
+        "- The implemented Early stopping module has a few related kwargs. These can be set by the user.\n",
+        "\n",
+        "- Stochastic weight averaging is not implemented for Early stopping Model, so it must be set to false, else ES will not run. The default value for swa is False, so the user does not explicitly have to set swa to False, but we have done so for demonstartion purposes. If swa is set to true, early stopping will not occur, and the model will run to completion.\n",
+        "\n",
+        "- Tolerance is how much minimum improvement is necessary to be considered as an improvement.\n",
+        "\n",
+        "- Paitence is how many epochs the model runs for without improvement before terminating. This is done in an attempt to prevent the model settling in a local minima, and resulting in sub-par performance\n"
+      ],
+      "metadata": {
+        "id": "dYia4cVRJDmK"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -720,12 +754,13 @@
         "id": "03da80b9"
       },
       "source": [
-        "# predictions"
+        "# Predictions\n",
+        " We use the early stopping model to predict on ```images_test```"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "3ef630cf"
       },
@@ -736,7 +771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "4bb0eac2",
         "colab": {
@@ -757,13 +792,22 @@
       "source": [
         "pred=model.predict(images_test) #user can provide threshold as well"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Auto-thresholding is currently only implemented for binary-class"
+      ],
+      "metadata": {
+        "id": "mFvTjed0JuRa"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNd67+OcK41aBqRoTVNNofb",
+      "authorship_tag": "ABX9TyPQmMWd0TM/eISso701P3tI",
       "include_colab_link": true
     },
     "kernelspec": {
