Set ES=True for clarity's sake

--- a/examples/notebooks/EarlyStopping_HRTEM_pv.ipynb
+++ b/examples/notebooks/EarlyStopping_HRTEM_pv.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNoyb8y0JpAp+zLK1fyAGnd",
+      "authorship_tag": "ABX9TyN1BpOEukhDKPT7Ccu1RTwB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -803,7 +803,7 @@
         "#fitting the model\n",
         "model.fit(images, labels, images_val, labels_val, # training data\n",
         "          training_cycles=3000, compute_accuracy=True, batch_size=16, swa=False, filename='ES_reg',\n",
-        "          patience=300,tolerance=1e-4,verbose=True,auto_thresh=True)\n",
+        "          ES=True, patience=300,tolerance=1e-4,verbose=True,auto_thresh=True)\n",
         "\n"
       ]
     },
