Set ES=True for clarity's sake

--- a/examples/notebooks/EarlyStopping_LBFO_pv.ipynb
+++ b/examples/notebooks/EarlyStopping_LBFO_pv.ipynb
@@ -745,7 +745,7 @@
         "#set auto_thresh +false, as only currently implemented for binary case\n",
         "model.fit(images, labels, images_val, labels_val, # training data\n",
         "          training_cycles=3000, compute_accuracy=True, batch_size=16, swa=False, filename='ES_reg',\n",
-        "          patience=300,tolerance=1e-4,verbose=True,auto_thresh=False)"
+        "          ES=True, patience=300,tolerance=1e-4,verbose=True,auto_thresh=False)"
       ]
     },
     {
@@ -807,7 +807,6 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPQmMWd0TM/eISso701P3tI",
       "include_colab_link": true
     },
     "kernelspec": {
