--- a/examples/notebooks/EarlyStopping_LBFO_pv.ipynb
+++ b/examples/notebooks/EarlyStopping_LBFO_pv.ipynb
@@ -18,7 +18,7 @@
       "source": [
         "# Early stopping Demo 1: LBFO dataset\n",
         "\n",
-        "This is a short demo for the improved AtomAI model. The model has several additions. such as\n",
+        "This is a short demo for the improved AtomAI model. The model has several additions, such as\n",
         "- Early stopping\n",
         "- Automatic binary thresholding\n",
         "- Weight Decay\n",
@@ -580,9 +580,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The parameters like training cycles, patience, number of augmented images created are modified so as to run in a google colab notebook without any premium resources. This is done in demo 2 as well.\n",
-        "\n",
-        "The training cycles were set to 5000 and patience to 500, the number of images produced were ~ 2500"
+        "In the reusability report article the parameters training cycles and patience are set to 5000 and 500, respectively. The number of augmented images were ~ 2500. In this example notebooks, the parameters like training cycles, patience, number of augmented images created are modified to run without any premium GPU resources. This is done for “EarlyStopping_HRTEM_pv.ipynb\" as well."
       ],
       "metadata": {
         "id": "FiKKqRjSrbI0"
@@ -742,10 +740,15 @@
         }
       ],
       "source": [
-        "#set auto_thresh +false, as only currently implemented for binary case\n",
+        "#set auto_thresh = false, as current implementation only works for the binary case\n",
         "model.fit(images, labels, images_val, labels_val, # training data\n",
         "          training_cycles=3000, compute_accuracy=True, batch_size=16, swa=False, filename='ES_reg',\n",
-        "          ES=True, patience=300,tolerance=1e-4,verbose=True,auto_thresh=False)"
+        "          ES=True, patience=300,tolerance=1e-4,verbose=True,auto_thresh=False)\n",
+        "\n",
+        "# In AtomAI by default the validation set is also evaluated on mini-batch. Set full_epoch=True if you want validation error to be reported for the full validation set (preferred when ES=True).\n",
+        "# model.fit(images, labels, images_val, labels_val, # training data\n",
+        "#          training_cycles=3000, compute_accuracy=True, batch_size=16, swa=False, filename='ES_reg',\n",
+        "#          ES=True, patience=50,tolerance=1e-4,verbose=True,auto_thresh=False, full_epoch=True)"
       ]
     },
     {
